# BTReport

./: .gitignore  README.md  environment.yml  pyproject.toml
btreport/: eval.py  eval_all.py  eval_json.py  generate_report.py  ollama_server.py  run_all_reports.py
btreport/evaluation/: __init__.py  collect_topics.py  eval_tbfact.py  make_leaderboard.py  tbfact.py  utils.py
btreport/llm_report_generation/: evaluate_reports.py  ollama_report_gen.py  ollama_report_gen_v2.py  run_ollama_model.sh  start_ollama_server.bash  vlm_report_gen.py
btreport/llm_report_generation/example_reports/: brats23_metadata-report-deepseek-r1:1.5b.json  brats23_metadata-report-deepseek-r1:32b.json  brats23_metadata-report-gpt-oss:120b.json
btreport/midline_shift/: README.md  midline_shift3d.py  register.py
btreport/midline_shift/register/: register.py
btreport/patient_metadata/: merge_metadata.py
btreport/utils/: __init__.py  anat_segmentation.py  log.py  plotting.py  register.py  register_cistern.py  start_ollama_server.bash
btreport/vasari_features/: __init__.py  extract_vasari_features.py  vasari_auto.py  vasari_auto_v2.py  vasari_translation_maps.py
data/datasheets/: TCGA-TCIA-BraTS-Mapping.xlsx  brats23_metadata_flattened.csv  cleaned_merged.csv
llm_report_generation/: README.md  evaluate_reports.py  ollama_report_gen.py  run_ollama_model.sh
midline_shift/: README.md
patient_metadata/: README.md  metadata_analysis.ipynb  utils.py
patient_metadata/datasheets/: BraTS Missing IDs.xlsx  UCSF-PDGM-Clinical.csv  all_merged.csv
vasari_features/: README.md
(+136 files in other folders)
